<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="android.text.TextUtils" />

        <variable
            name="viewModel"
            type="com.demo.logindemoapp.businesslogic.viewmodel.activity.ViewModelLogin" />

        <variable
            name="generalListener"
            type="com.demo.logindemoapp.businesslogic.interfaces.GeneralClickListener" />

    </data>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="0dp"
            android:paddingBottom="30dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/bg_border"
                android:elevation="10dp"
                android:padding="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivEmailAnswer"
                tools:context=".View.MainActivity">

                <TextView
                    android:id="@+id/lblTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/text_sign_in"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_login_email"
                    style="@style/tilAppearanceGray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/text_email_id"
                    android:textColorHint="@color/color_grey_text"
                    app:hintTextColor="@color/color_grey_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lblTitle">

                    <EditText
                        android:id="@+id/txtEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:text="@={viewModel.emailAddress}" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_login_password"
                    style="@style/tilAppearanceGray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/text_password"
                    android:textColorHint="@color/color_grey_text"
                    app:hintTextColor="@color/color_grey_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_login_email"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/color_grey_text">

                    <EditText
                        android:id="@+id/txtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:paddingStart="0dp"
                        android:paddingEnd="40dp"
                        android:singleLine="true"
                        android:text="@={viewModel.password}"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_login_otp"
                    style="@style/tilAppearanceGray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/text_otp"
                    android:textColorHint="@color/color_grey_text"
                    app:hintTextColor="@color/color_grey_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_login_password"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/color_grey_text">

                    <EditText
                        android:id="@+id/txtOtp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:imeOptions="actionDone"
                        android:inputType="numberPassword"
                        android:maxLength="4"
                        android:paddingStart="0dp"
                        android:paddingEnd="40dp"
                        android:singleLine="true"
                        android:text="@={viewModel.otp}"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/llOtp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_login_otp"
                    android:layout_marginTop="20dp">

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chk_Remember"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:lineSpacingExtra="8sp"
                        android:buttonTint="@color/radio_text_color"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:text="@string/remember_me" />

                    <TextView
                        android:id="@+id/lblResendOtp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="8sp"
                        android:text="@string/text_resend_otp"
                        android:textColor="@drawable/txt_resend_otp_selector"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/til_login_otp" />
                </LinearLayout>


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/llOtp">

                    <Button
                        android:id="@+id/btnClear"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_shape_capsule"
                        android:onClick="@{(v) -> viewModel.onClearClick(v)}"
                        android:text="@string/text_clear"
                        android:textColor="@drawable/btn_txt_selector"
                        android:textSize="18sp"
                        app:backgroundTint="@null" />

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_shape"
                        android:backgroundTint="@color/purple_500"
                        android:onClick="@{(v) -> viewModel.onClick(v)}"
                        android:text="@string/text_login"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_or_divider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ll_buttons">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginBottom="5dp">

                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_weight="1"
                            android:background="@color/color_grey_text" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_grey_text_border"
                            android:paddingHorizontal="10dp"
                            android:paddingVertical="8dp"
                            android:text="@string/text_or"
                            android:fontFamily="sans-serif-light"
                            android:textAllCaps="true"
                            android:textColor="@color/color_grey_text"
                            android:textSize="18sp" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_weight="1"
                            android:background="@color/color_grey_text" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="20dp"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/google"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_marginHorizontal="10dp"
                            app:srcCompat="@drawable/ic_google" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/facebook"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_marginHorizontal="10dp"
                            app:srcCompat="@drawable/ic_facebook" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/linkedin"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_marginHorizontal="10dp"
                            app:srcCompat="@drawable/ic_linked_in" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <TextView
                        android:id="@+id/tvSignIn2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:textColor="@color/black"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/text_do_not_have_an_account_login" />


                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.constraintlayout.widget.ConstraintLayout>


            <ImageView
                android:id="@+id/ivEmailAnswer"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_app_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</layout>